bpo-37221: Add PyCode_NewEx to be used internally and set PyCode_New as a compatibility wrapper